remove resource compilation

--- a/test_package/CMakeLists.txt
+++ b/test_package/CMakeLists.txt
@@ -12,11 +12,7 @@ find_package(Qt6 COMPONENTS Core REQUIRED CONFIG)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 
-qt6_wrap_ui(UI_HEADERS
-  temp.ui
-)
-
-set(SOURCES test_package.cpp greeter.h example.qrc)
+set(SOURCES test_package.cpp greeter.h)
 
 add_executable(${PROJECT_NAME} WIN32 ${SOURCES})
 
