--- a/test_package/CMakeLists.txt
+++ b/test_package/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_STANDARD 17)
 project(test_package)
 
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
-conan_basic_setup()
+conan_basic_setup(TARGETS)
 
 find_package(Qt6 COMPONENTS Core REQUIRED CONFIG)
 
